fix (swagger.json , news.route.js) findById did not appear in swagger
